song grid alignment issues fix

--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -166,6 +166,10 @@ a {
   outline-width: 2px;
 }
 
+.song-grid {
+  padding: 10px;
+}
+
 /* Responsive Design */
 
 @media (max-width: 668px) {
